<resources>
    <string name="app_name">MyCampus</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email*</string>
    <string name="prompt_password">Password*</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_User_sign_Up_Button">Sign Up</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_forgot">Forgot Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_ruet__map">Map</string>
</resources>
