<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#D2B48C"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.broken.nezamulislamar.mycampus.LoginActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/emailLoginMainPage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/passwordMainPage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Teacher"
                android:layout_marginTop="30dp"
                android:id="@+id/TeacherLog"
                android:layout_centerVertical="true"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold"
                android:layout_alignParentStart="true" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Student"
                android:id="@+id/StudentLog"
                android:layout_centerVertical="true"
                android:textColor="#FFFF00"
                android:textStyle="bold"
                android:layout_alignParentStart="true" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Student CR"
                android:id="@+id/StudentCRLog"
                android:layout_centerVertical="true"
                android:textColor="#FFFF00"
                android:textStyle="bold"
                android:layout_alignParentStart="true" />

            <!-- Login progress -->
            <ProgressBar
                android:id="@+id/login_progressLogin"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:layout_marginTop="10dp"
                android:id="@+id/UserMsgLogin" />

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="170dp"
                android:layout_gravity="right"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="#000000"

                android:text="@string/action_sign_in"
                android:textStyle="bold" />
            <Button
                android:id="@+id/SignUp"
                style="?android:textAppearanceSmall"
                android:layout_width="170dp"
                android:layout_gravity="right"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="#000000"

                android:text="@string/action_sign_up"
                android:textStyle="bold" />
            <Button
                android:id="@+id/forgotPassword"
                style="?android:textAppearanceSmall"
                android:layout_width="170dp"
                android:layout_gravity="right"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="#000000"

                android:text="@string/action_forgot"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
